# varql

./: Cargo.toml  README.md
sample/: .sample.vcf.swp  test.sam
src/: combine.rs  machine.rs  main.rs  pad.rs  preparevariant.rs  query.rs  refreturn.rs  samread.rs  varstruct.rs
